[project]
name = "chatbot_api"
version = "0.1"
dependencies = [
    "asyncio==3.4.3",
    "fastapi==0.115.8",
    "langchain==0.3.17",
    "langchain_community==0.3.16",
    "langchain_google_genai==2.0.9",
    "langchain_neo4j==0.3.0",
    "langchainhub==0.1.14",
    "numpy==1.26.2",
    "openai==1.7.2",
    "opentelemetry-api==1.22.0",
    "pydantic==2.10.6",
    "uvicorn==0.25.0"
]

[project.optional-dependencies]
dev = ["black", "flake8"]